--- a/BlazorWebAssemblyApp/wwwroot/index.html
+++ b/BlazorWebAssemblyApp/wwwroot/index.html
@@ -7,8 +7,10 @@
     <title>BlazorWebAssemblyApp</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/standard-base.css">
     <link href="css/app.css" rel="stylesheet" />
     <link href="BlazorWebAssemblyApp.styles.css" rel="stylesheet" />
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </head>
 
 <body>
